--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body>
   
 Hello world, my name is Asmi!
-<img src="Spivey Profile" width="200" height="200"
+<img src="Spivey Profile" alt="C:\Users\Agni and Asmi\Pictures" width="200" height="200"
      
 </body>
 
