--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CVI Therapy</a></li>
+        		<li><a href="/cvi-therapy">CVI Therapy</a></li>
         		<li><a href="/blog">Blog</a></li>
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Asmi Kumar!</h1>
-				<p>I like computer science and math!<a href="/about">Read more about my life...</a></p>
+				<p>I like computer science and math! <a href="/C:\Users\Agni\Documents\Asmi\Science Fair 2020-21\cvi-tool\pretty\cvi_pages\index_navbar.html">Check out my newest project here.</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
