Correcting file paths

--- a/cvi-therapy/customize.html
+++ b/cvi-therapy/customize.html
@@ -24,8 +24,8 @@
     <link href="css/sb-admin.css" rel="stylesheet">
 
     <!-- Other HTML pages -->
+    <script src="./index_content.html"></script>
     <script src="./index.html"></script>
-    <script src="./index_navbar.html"></script>
     <script src="./customize.html"></script>
     <script src="./recommended.html"></script>
     <script src="./logout.html"></script>
@@ -193,11 +193,11 @@
       </style>
 
           <header class="header">
-        <a href="index_navbar.html" class="logo">CVI Therapy</a>
+        <a href="index.html" class="logo">CVI Therapy</a>
         <input class="menu-btn" type="checkbox" id="menu-btn" />
         <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
         <ul class="menu">
-          <li><a href="index_navbar.html" style="color: darkgray"><i class="fas fa-fw fa-user-circle"></i> Profile</a></li>
+          <li><a href="index.html" style="color: darkgray"><i class="fas fa-fw fa-user-circle"></i> Profile</a></li>
           <li><a href="customize.html"><i class="fas fa-fw fa-cogs"></i> Customize</a></li>
           <li><a href="recommended.html" style="color: darkgray"><i class="fas fa-fw fa-check-square"></i> Recommended Exercises</a></li>
           <li><a href="dashboard.html" style="color: darkgray"><i class="fas fa-fw fa-tachometer-alt"></i> Dashboard</a></li>
