--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
     		<ul>
         		<li><a href="/">Home</a></li>
         		<li><a href="./cvi-therapy">CVI Therapy</a></li>
-        		<li><a href="/blog">Blog</a></li>
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Asmi Kumar!</h1>
-				<p>I like computer science and math! <a href="./cvi-therapy/index_navbar.html">Check out my newest project here.</a></p>
+				<p>I like computer science and math! <a href="./cvi-therapy">Check out my newest project here.</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
