--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Asmi Kumar!</h1>
-				<p>I like computer science and math! <a href="./cvi-therapy">Check out my newest project here.</a></p>
+        		<h1>Hi, I'm Asmi!</h1>
+				<p>I'm a junior attending Milton High School in GA. I'm passionate about utilizing computer science and engineering to solve problems for social good! I also enjoy math and statistics, writing for Medium's <a href="https://medium.com/@asmikumar.ak"> Towards Data Science </a>, <a href='https://www.youtube.com/user/AgniAsmi'> playing the piano </a>, teaching, and <a href='https://github.com/asmikumar'> conducting independent research </a>! Check out my <a href="./cvi-therapy"> newest project here.</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
