--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi, I'm Asmi!</h1>
-				<p>I'm a junior attending Milton High School in GA. I'm passionate about utilizing computer science and engineering to solve problems for social good! I also enjoy math and statistics, writing for Medium's <a href="https://medium.com/@asmikumar.ak"> Towards Data Science </a>, <a href='https://www.youtube.com/user/AgniAsmi'> playing the piano </a>, teaching, and <a href='https://github.com/asmikumar'> conducting independent research </a>! Check out my <a href="./cvi-therapy"> newest project here.</a></p>
+				<p>I'm a junior attending Milton High School in GA. I'm passionate about utilizing computer science and engineering to solve problems for social good! I also enjoy math and statistics, writing for Medium's <a href="https://medium.com/@asmikumar.ak"> Towards Data Science</a>, <a href='https://www.youtube.com/user/AgniAsmi'> playing the piano</a>, teaching, and <a href='https://github.com/asmikumar'> conducting independent research</a>! Check out my newest project <a href="./cvi-therapy"> here.</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
