Updating text to universal font

--- a/cvi-therapy/customize.html
+++ b/cvi-therapy/customize.html
@@ -46,7 +46,7 @@
         <style>
             body {
           /*margin: 0;*/
-          font-family: 'Segoe UI';
+          font-family: 'Open Sans';
           /*background-color: #f4f4f4;*/
         }
 
@@ -213,10 +213,10 @@
 
     <style>
       body {
-          font-family: 'Segoe UI';
+          font-family: 'Open Sans';
       }
       button {
-          font-family: 'Segoe UI';
+          font-family: 'Open Sans';
           font-size: 17px;
           /*border: black;*/
           /*outline:none;*/
