--- a/cvi-therapy/dashboard.html
+++ b/cvi-therapy/dashboard.html
@@ -37,7 +37,7 @@
     <style>
             body {
           /*margin: 0;*/
-          font-family: 'Segoe UI';
+          font-family: 'Open Sans';
           /*background-color: #f4f4f4;*/
         }
 
@@ -353,7 +353,7 @@
             <!-- Tab links -->
             <p></p>
             <div class="tab" style='border-radius: 4px;'>
-              <div style="font-family: 'Segoe UI'; font-size: 22px; padding: 8px">Proficiency</div>
+              <div style="font-family: 'Open Sans'; font-size: 22px; padding: 8px">Proficiency</div>
             </div>
             <p></p>
 
@@ -435,13 +435,13 @@
           <div class="row">
             <div class='col-lg-10'>
               <div class="tab" style='border-radius: 4px;'>
-                <div style="font-family: 'Segoe UI'; font-size: 22px; padding: 8px">Grades</div>
+                <div style="font-family: 'Open Sans'; font-size: 22px; padding: 8px">Grades</div>
               </div>
             </div>
 
             <div class='col-lg-2' style='float: right' >
               <div class="tab" style='border-radius: 4px;'>
-              <div style="font-family: 'Segoe UI'; font-size: 16px; padding: 8px">
+              <div style="font-family: 'Open Sans'; font-size: 16px; padding: 8px">
                 <label for="threshold">Threshold:</label>
                 <select id="thresholdSelect">
                   <option value="0">0%</option>
