--- a/cvi-therapy/recommended.html
+++ b/cvi-therapy/recommended.html
@@ -58,7 +58,7 @@
           <style>
 	      		body {
 				  /*margin: 0;*/
-				  font-family: 'Segoe UI';
+				  font-family: 'Open Sans';
 				  /*background-color: #f4f4f4;*/
 				}
 
