--- a/cvi-therapy/index.html
+++ b/cvi-therapy/index.html
@@ -39,7 +39,7 @@
 
         body {
           /*margin: 0;*/
-          font-family: 'Segoe UI';
+          font-family: 'Open Sans';
           /*background-color: #f4f4f4;*/
         }
 
