Adding new project

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     		<ul>
         		<li><a href="/">Home</a></li>
         		<li><a href="./cvi-therapy">CVI Therapy</a></li>
+        		<li><a href="./covid-19">COVID-19 Impact</a></li>
     		</ul>
 		</nav>
 		<div class="container">
